--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
             <input type="text" id="search-bar" class="w-3/12 h-5/6 p-2 rounded-lg" placeholder="Search your phone">
             <button id="search-btn" class="bg-blue-400 p-2 lg:w-1/6 text-white rounded-lg hover:bg-blue-700">Search</button>
         </div>
+        
+        <!-- Modal -->
+
+        <div id="phone-details" class="border bg-blue-400 bg-opacity-50 w-1/3 mx-auto max-w-full p-2 hidden">
+            <div class="flex justify-between items-center">
+                <h1>Phone Details</h1>
+                <button id="close-details-btn"><img class="w-12" src="./images/close.png" alt=""></button>
+            </div>
+            <hr>
+            <div id="phone-details-container">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut unde eius magnam adipisci a, doloremque voluptatem quae minus explicabo voluptate eveniet. Ad aliquid, dolore ipsum accusantium eaque ratione illum debitis!
+            </div>
+        </div>
+        
+  
         <div id="spinner" class="m-2 animate-spin hidden">
             <img class="w-12 mx-auto" src="./images/loading.png" alt="">
         </div>
@@ -31,8 +46,8 @@
                 Nothing to show
             </p>
         </div>
-        <div id="show-all-btn" class="flex justify-center mx-auto py-4 sm:w-1/2 lg:w-1/6 hidden">
-            <button class="bg-blue-400 p-2 sm:w-1/2 text-white rounded-lg hover:bg-blue-700">Show All</button>
+        <div id="show-all" class="flex justify-center mx-auto py-4 sm:w-1/2 lg:w-1/6 hidden">
+            <button id="show-all-btn" class="bg-blue-400 p-2 sm:w-1/2 text-white rounded-lg hover:bg-blue-700">Show All</button>
         </div>
     </main>
     <footer></footer>
